RESOLVED FIXED15764
compiler warning
https://bugs.webkit.org/show_bug.cgi?id=15764
Summary compiler warning
David Carson
Reported 2007-10-30 07:39:11 PDT
Some compilers give a warning for the following function: inline bool JSValue::isNumber() const { return JSImmediate::isNumber(this) || !JSImmediate::isImmediate(this) && asCell()->isNumber(); } "warning: suggest parentheses around && within ||" This file is compiled into a lot of the JSCore files and the warning is seen for every file.
Attachments
patch (1.08 KB, patch)
2007-10-30 07:48 PDT, David Carson
darin: review+
David Carson
Comment 1 2007-10-30 07:48:56 PDT
Created attachment 16948 [details] patch insert suggested braces, also makes it easier to read.
Darin Adler
Comment 2 2007-10-30 07:56:15 PDT
Comment on attachment 16948 [details] patch Parentheses look fine. But not the spaces within the parentheses! We don't use spaces there in our expressions.
Darin Adler
Comment 3 2007-11-02 16:27:38 PDT
Committed revision 27381.
Note You need to log in before you can comment on or make changes to this bug.