        Reviewed by Darin.

Fix compiler warning "warning: suggest parentheses around && within ||"
        http://bugs.webkit.org/show_bug.cgi?id=15764

        * kjs/value.h: (KJS::JSValue::isNumber): Add parentheses.



Canonical link: https://commits.webkit.org/21302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27381 268f45cc-cd09-0410-ab3c-d52691b4dbfc